# learn_vulkan_c

./: .gitignore  Makefile  meson.build  xmake.lua
include/: app.h  constants.h  extensions.h  vulkan_utils.h  window.h
learnvulkan/: app.c  app.h  constants.c  main.c  window.c  window.h
raxtor-c/: debug.c  extensions.c  instance.c  renderer.c  utils.c  validation.c
raxtor-c/include/: raxtor_renderer.h
raxtor-c/include/vkrax/: debug.h  extensions.h  instance.h  utils.h  validation.h
src/: app.c  constants.c  extensions.c  main.c  vulkan_utils.c  window.c
